# cli_tool

./: INSTALL.md  LICENSE  Makefile  README.md  ailab-monitor.service  cli.sh  install.sh  pyproject.toml  requirements.txt  test-install.sh  uninstall.sh
.github/: copilot-instructions.md
docs/: linux-utils-monitor.service  linux-utils.1  linux-utils.desktop
man/: cli.1  linux-backup.1  linux-filemanager.1  linux-nettools.1  linux-proctools.1  linux-sysinfo.1  linux-utils.1
src/linux_cli_utils/: __init__.py  backup.py  cli.py  filemanager.py  nettools.py  proctools.py  sysinfo.py  utils.py
src/linux_cli_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_filemanager.py  test_sysinfo.py  test_utils.py
